# mapCreator

./: CMakeLists.txt  Console.cpp  Console.hpp  Map.cpp  Map.hpp  Resources.cpp  Resources.hpp  StateMachine.hpp  UI.cpp  UI.hpp  Utils.hpp  main.cpp
ready/: DefaultMapName.map  mapCreator  myFirstMap.map.bak  script
ready/blocks/: 06_Square.png~  08_Triangle2.png~  09_spiral.png~  10_shape1.png~  11_shape2.png~
